--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "uuid": "^13.0.0",
     "yup": "^1.7.0",
     "zod": "^3.22.4",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@react-native-picker/picker": "2.11.1",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
