--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^2.9.11",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "expo": "~54.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
@@ -35,17 +37,18 @@
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "uuid": "^13.0.0",
     "yup": "^1.7.0",
     "zod": "^3.22.4",
-    "zustand": "^5.0.8",
-    "@react-native-picker/picker": "2.11.1",
-    "react-native-get-random-values": "~1.11.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
