--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^2.9.11",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -46,7 +46,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "uuid": "^13.0.0",
-    "yup": "^1.7.0",
+    "yup": "^1.7.1",
     "zod": "^3.22.4",
     "zustand": "^5.0.8"
   },
