--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-query": "^5.90.2",
     "expo": "~54.0.7",
     "expo-constants": "~18.0.8",
     "expo-file-system": "~19.0.16",
